tests/ast_interpreter/int.expected
42
4
4
<string>:5:11: error: function int expects 1 argument, but 0 were provided
    print(int());
          ^^^^^
